# JetPipe

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  개선.md
.github/workflows/: release.yml
docs/: history.md  plan.md
scripts/: make_icon.py
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: conn.rs  error.rs  keychain.rs  lib.rs  main.rs  session.rs  ssh.rs  transfer.rs
src/components/: ConfirmDialog.tsx  ConflictDialog.tsx  ConnectionDialog.tsx  ContextMenu.tsx  DevConsole.tsx  FileList.tsx  ImportDialog.tsx  Panel.tsx  PromptDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  Splitter.tsx  TransferQueue.tsx  TreeView.tsx
src/lib/: api.ts  devlog.ts  i18n.ts  pathHistory.ts  sshConfig.ts  theme.ts  utils.ts  vault.ts
