[package]
name = "jetpipe"
version = "0.1.10"
description = "JetPipe — In-memory streaming SFTP pipeline"
authors = ["JetPipe"]
edition = "2021"

[lib]
name = "jetpipe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# vendored-openssl statically links a known-good OpenSSL so:
#   1. libssh2 on Windows can actually parse OpenSSH-format Ed25519
#      private keys (system libssh2/WinCNG builds reject them with a
#      bare [Session(-1)] unknown error).
#   2. cross-compiling to macOS x86_64 from an aarch64 host stops
#      failing on "Could not find directory of OpenSSL installation".
# Trade-off: ~3MB bigger binary + slower first-time compile.
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
parking_lot = "0.12"
keyring = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
