[package]
name = "jetpipe"
version = "0.1.13"
description = "JetPipe — In-memory streaming SFTP pipeline"
authors = ["JetPipe"]
edition = "2021"

[lib]
name = "jetpipe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
# libssh2-sys's `openssl-on-win32` is REQUIRED for libssh2 to actually use
# OpenSSL on Windows MSVC. Without it, libssh2 defaults to WinCNG even
# when openssl-sys is vendored, and OpenSSH-format Ed25519 private keys
# fail to parse with a bare [Session(-1)] unknown error.
libssh2-sys = { version = "0.3", features = ["openssl-on-win32"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
parking_lot = "0.12"
keyring = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
